# cmake 的最小版本要求
cmake_minimum_required(VERSION 3.12)
# 这个CMakeLists管理的工程名称
project(DataStructure_And_Algorithm)
set(CMAKE_CXX_STANDARD 14)
#生成可执行程序 语法:add_executable(可执行程序名 要编译的cpp)
add_executable(Stack DataStructure/Stack/Stack.cpp)
add_executable(DFS Algorithm/SearchAlgorithm/DFS.cpp)
add_executable(ShStack DataStructure/Stack/ShStack.cpp)
add_executable(LiStack DataStructure/Stack/LiStack.cpp)
add_executable(LinkList DataStructure/LinkList/LinkList.cpp)
add_executable(SqQueue DataStructure/Queue/SqQueue.cpp)
add_executable(Hashmap DataStructure/Hashmap/Hashmap.cpp)
add_executable(QuickSort Algorithm/SortAlgorithm/QuickSort.cpp)
add_executable(MergeSort Algorithm/SortAlgorithm/MergeSort.cpp)
add_executable(BubbleSort Algorithm/SortAlgorithm/BubbleSort.cpp)
add_executable(InsertSort Algorithm/SortAlgorithm/InsertSort.cpp)
add_executable(SelectionSort Algorithm/SortAlgorithm/SelectionSort.cpp)
add_executable(BinaryTree DataStructure/Tree/BinaryTree.cpp)
add_executable(HeapSort Algorithm/SortAlgorithm/HeapSort.cpp)
add_executable(LinkQueue DataStructure/Queue/LinkQueue.cpp)